# Notebook

./: .gitignore  CMakeLists.txt
src/forms/: addnote.ui  mainwindow.ui  notebutton.ui  notelabel.ui
src/headers/: MyTextEdit.h  addnote.h  mainwindow.h  notebutton.h  notelabel.h
src/source/: MyTextEdit.cpp  addnote.cpp  mainwindow.cpp  notebutton.cpp  notelabel.cpp
